@@ -31,5 +31,4 @@ server needs:
 - add UI option to only collect data without filing, print path to
   .crash file
 - if you say no to crash bug filing, print path
-- add MIME type
 - hook directory for scripts which are always executed
