@@ -7,6 +7,7 @@ usr/share/apport/testsuite/
 usr/share/doc/apport
 usr/share/locale
 usr/share/icons
+usr/share/mime
 usr/share/apport/package-hooks
 usr/share/apport/*cli* usr/bin/
 ../local/ubuntu-bug usr/bin
