@@ -23,6 +23,7 @@ setup(name='apport',
       py_modules=['problem_report', 'apport_python_hook'],
       data_files=[('share/apport', ['gtk/apport-gtk.glade'] + glob.glob('qt4/*.ui')),
                   ('share/icons/hicolor/scalable/apps', ['apport/apport.svg']),
+                  ('share/mime/packages', glob.glob('xdg-mime/*')),
                   ('share/apport/testsuite/', ['test-apport', 'test-hooks', 'run-tests']),
                   ('share/doc/apport/', glob.glob('doc/*.txt') + glob.glob('doc/*.pdf')),
                   ('share/apport/package-hooks/', glob.glob('package-hooks/*')),
